hphp/hack/test/typecheck/ffp/tuple_hints_broken.php
<?hh // strict

function foo(): vec<tuple(int, string)> {
  return vec[];
}
